--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-md-4 justify-content-end">
                     <div class="limit">
-                        <img src="/images/matts.jpg" class="w-100" alt="Thobela Lefase"/>
+                        <img src="images/matts.jpg" class="w-100" alt="Thobela Lefase"/>
                     </div>
 
                 </div>
