--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="images/matts.jpg">
+    <meta property="og:image" content="https://github.com/mphalane/matts_makhura/tree/master/images/matts.jpg">
     <title>Matts Makhura</title>
 
     <!-- Bootstrap CSS -->
