--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="https://mphalane.github.io/matts_makhura/images/ogmatts.jpeg" property="og:image">
+    <meta content="https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.jpg" property="og:image">
     <title>Matts Makhura</title>
 
     <!-- Bootstrap CSS -->
