--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.jpg" property="og:image">
+    <meta property='og:title' content='Matts Makhura'/>
+    <meta property='og:image' content='https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.jpg'/>
+    <meta property='og:description' content='Online Portfolio'/>
+    <meta property='og:url' content='https://mphalane.github.io/matts_makhura/'/>
     <title>Matts Makhura</title>
 
     <!-- Bootstrap CSS -->
