--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link href="styles.css" rel="stylesheet"/>
     
     <meta property='og:title' content='Matts Makhura'/>
-    <meta property='og:image' content='https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.jpg'/>
+    <meta property='og:image:secure_url' content='https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.png'/>
+    <meta property='og:image:type' content='images/png'/>
     <meta property='og:description' content='Online Portfolio'/>
     <meta property='og:url' content='https://mphalane.github.io/matts_makhura/'/>
 </head>
