--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet"/>
     
-    <meta property='og:title' content='Matts Makhura'/>
-    <meta property='og:image:url' content='https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.png'/>
-    <meta property='og:image:type' content='images/png'/>
-    <meta property='og:description' content='Online Portfolio'/>
-    <meta property='og:url' content='https://mphalane.github.io/matts_makhura/'/>
+    <meta property="og:image:url" content="https://github.com/mphalane/matts_makhura/blob/master/images/ogmatts.png">
+    <meta property="og:image:type" content="images/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+    <meta property="og:title" content="Matts Makhura"/>
+    <meta property="og:description" content="Online Portfolio"/>
+    <meta property="og:url" content="https://mphalane.github.io/matts_makhura/"/>
 </head>
 <body>
  
